updated example with new grammar